--- a/index.html
+++ b/index.html
@@ -8,12 +8,48 @@
     <title>CSS Grid</title>
 </head>
 <body>
-    <div class="container">
-        <div class="room" id="living-room">Living Room</div>
-        <div class="room" id="kitchen">Kitchen</div>
-        <div class="room" id="bedroom">Bedroom</div>
-        <div class="room" id="bathroom">Bathroom</div>
-        <div class="room" id="closet">Closet</div>
+    <div class="grid-container">
+        <div class="grid-item">
+          <p>Odin 1</p>
+          <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+        </div>
+        <div class="grid-item">
+          <p>Odin 2</p>
+          <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+        </div>
+        <div class="grid-item">
+          <p>Odin 3</p>
+          <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+        </div>
+        <div class="grid-item">
+          <p>Odin 4</p>
+          <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+        </div>
+        <div class="grid-item">
+          <p>Odin 5</p>
+          <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+        </div>
+        <div class="grid-item">
+          <p>Odin 6</p>
+          <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+        </div>
+        <div class="grid-item">
+          <p>Odin 7</p>
+          <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+        </div>
+        <div class="grid-item">
+          <p>Odin 8</p>
+          <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+        </div>
+        <div class="grid-item">
+          <p>Odin 9</p>
+          <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+        </div>
+        <div class="grid-item">
+          <p>Odin 10</p>
+          <img src="https://i.imgur.com/jkwFqfX.png" alt="top logo" />
+        </div>
       </div>
+   
 </body>
 </html>
